--- a/src/components/report/report.css
+++ b/src/components/report/report.css
@@ -1,40 +1,95 @@
+
 .report-container {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-.sign-form{
+    background-color: red;
     padding: 10px;
-    border: 1px solid black;
+
 }
 
-.content-table{
+.report-header{
+    text-align: center;
+    font-size: 15px;
+
+    height: 250px;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+
+.company-name{
+    font-size: 35px;
+    text-align: center;
+    font-weight: bold;
+    margin: 0px;
+}
+
+.company-info{
+    line-height: 7px;
+}
+
+
+.content-section{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: yellow;
+}
+.content-table {
     width: 100%;
     border: 1px solid black;
     margin-bottom: 10px;
     border-collapse: collapse;
+    align-self: center;
 
 }
 
-.bordered{
+.bordered {
     border: 1px solid black;
 }
 
+.invoice-info{
+    display: flex;
+    flex-direction: column;
+    background-color: green;
+    height: 200px;
+    font-weight: bold;
+}
 
-.invoice-card{
+.invoice-card {
+    align-self: center;
+    width: 100%;
     margin-bottom: 10px;
 }
 
-.total-table{
+.total-table {
     border: 1px solid black;
     border-collapse: collapse;
     margin-bottom: 10px;
     align-self: flex-end;
     width: 40%;
 }
-.total-section{
+
+.total-section {
     display: flex;
     flex-direction: column;
+    background-color: blueviolet;
+}
+
+.sign-form {
+    padding: 10px;
+    border: 1px solid black;
+    position: relative;
+    bottom: 0;
+    background-color: burlywood;
+
+}
+
+.invoice-warning{
+    width: 100%;
+    line-height: 15px;
 }
