--- a/src/components/report/report.css
+++ b/src/components/report/report.css
@@ -1,7 +1,7 @@
 
 .report-container {
     width: 90%;
-    height: 100%;
+    height: 3508px;
     display: flex;
     flex-direction: column;
     padding: 10px;
