--- a/src/components/report/report2.css
+++ b/src/components/report/report2.css
@@ -119,7 +119,7 @@
     margin-bottom: 10px;
     align-self: flex-end;
     width: 150px;
-    height: 100%;
+    height: 150px;
     padding: 0px;
 }
 
