--- a/src/components/history/HistoryPage.css
+++ b/src/components/history/HistoryPage.css
@@ -14,3 +14,20 @@
     display: flex;
     justify-content: center;
   }
+
+.no-history-data{
+    background-color: tomato;
+    border-radius: 5px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.hp-div{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
