--- a/src/components/history/HistorySearch.css
+++ b/src/components/history/HistorySearch.css
@@ -12,7 +12,12 @@
 }
 
 .input-search{
-    width: 170px;
+    width: 100%;
+}
+.input-div{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 .text{
